--- a/views/home.html
+++ b/views/home.html
@@ -1,9 +1,9 @@
 <body>
     <div id="top" class="sec">
       <div class="namepos">
-        <h2>Sergio Barker</h2>
-        <h1><hr></h1>
-        <h3>Web Developer</h3>
+        <h1>Sergio Barker</h1>
+        <!-- <h1><hr></h1> -->
+        <!-- <h3>Web Developer</h3> -->
       </div>
     </div>
     <div id="about" class="sec1 sec">
