--- a/styles/styles.css
+++ b/styles/styles.css
@@ -166,20 +166,22 @@
   }
 
   .namepos {
-    height: 25%;
-    width: 70%;
+    height: 15%;
+    width: 19%;
     display: flex;
     flex-direction: column;
     position: relative;
     margin: auto;
-    color: white;
+    color: black;
+    background-color: white;
+    border: 2px solid black;
     border-radius: 0;
     opacity: .9;
     text-align: center;
   }
 
   .namepos h2 {
-    font-size: 35px;
+    font-size: auto;
   }
 
   #about {
@@ -318,7 +320,7 @@
     margin: auto;
     display: flex;
     flex-wrap: wrap;
-    background-color: black;
+    background-color: white;
     border: 2px solid black;
     opacity: .9;
     justify-content: center;
