--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,14 +8,13 @@
   html {
     height: 2000px;
     width: 100%;
-    font-family: JosifinSans-Regular;
+    /* font-family: JosifinSans-Regular; */
     color: black;
   }
 
   body {
     margin: 0;
     padding: 0;
-    font-family: JosifinSans-Regular;
   }
 
   /* a {
@@ -151,7 +150,7 @@
   } */
 
   #top {
-    height: 725px;
+    height: 100vh;
     width: 100%;
     background-image: url("./imgs/darkwood.jpg");
     background-size: cover;
@@ -161,22 +160,21 @@
 
   .namepos h1 {
     height: auto;
-    width: 50%;
+    /* width: 50%; */
     margin: auto;
   }
 
   .namepos {
-    height: 15%;
+    height: 7%;
     width: 19%;
     display: flex;
     flex-direction: column;
     position: relative;
     margin: auto;
-    color: black;
-    background-color: white;
-    border: 2px solid black;
+    color: white;
+    background-color: #1A1919;
+    /* border: 2px solid black; */
     border-radius: 0;
-    opacity: .9;
     text-align: center;
   }
 
@@ -505,13 +503,13 @@
   }
   .left {
     position: relative;
-    width: 50%;
+    width: 49%;
     height: 100%;
     display: flex;
   }
 
   .right {
-    width: 50%;
+    width: 49%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -553,7 +551,7 @@
     height: 80vh;
     width: 100%;
     position: relative;
-    background-color: #333333;
+    background-color: #1A1919;
     background-size: cover;
     display: flex;
     font-family: JosifinSans-Regular;
