--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -125,20 +125,21 @@
   .namepos h1 {
     margin: auto;
     width: 60%;
-    font-size: 15px;
+    font-size: 18px;
+    letter-spacing: 1px;
   }
 
   .namepos {
-    height: 25%;
-    width: 100%;
+    height: 7%;
+    width: 200px;
     display: flex;
     flex-direction: column;
     position: relative;
     margin: auto;
     color: white;
-    background-color: none;
+    background-color: #1A1919;
+    /* border: 2px solid black; */
     border-radius: 0;
-    opacity: .9;
     text-align: center;
   }
 
