--- a/views/home.html
+++ b/views/home.html
@@ -92,8 +92,8 @@
           </div>
           <div class="right piece">
             <h1 class="pronam"><a href="http://rockshowz.info">RockshowZ</a></h1>
-            <p>An app built as a final/group project at Dev Mountain. This project uses Angularjs, Node, Express, ElephantSql, Auth0 and
-            I hosted on Digital Ocean. It uses multiple APIs to search for venues or bands. You can login and add favorites to track
+            <p>An app built as a final/group project at Dev Mountain. This project uses Angularjs,
+              Node, Express, ElephantSql, Auth0 and is hosted on Digital Ocean. It uses multiple APIs to search for venues or bands. You can login and add favorites to track
           later.</p>
           </div>
         </div>
