--- a/styles/styles.css
+++ b/styles/styles.css
@@ -291,7 +291,7 @@
   }*/
 
   #skills {
-    height: 625px;
+    height: auto;
     width: 100%;
     background-image: url("imgs/codeback.jpeg");
     color: white;
@@ -316,6 +316,7 @@
     width: 50%;
     padding: 50px;
     margin: auto;
+    margin-bottom: 50px;
     display: flex;
     flex-wrap: wrap;
     background-color: white;
