--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -405,7 +405,7 @@
     width: 90%;
     margin: 0 auto;
     margin-bottom: 100px;
-    display: flex;
+    display: none;
     flex-direction: row;
     flex-wrap: wrap;
     position: relative;
