--- a/styles/reset.css
+++ b/styles/reset.css
@@ -42,3 +42,10 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+wpsisac-slick-slider,
+.wpsisac-slick-carousal,
+.wpsisac-slider-nav
+{visibility: hidden; opacity:0; -ms-filter: “progid:DXImageTransform.Microsoft.Alpha(Opacity=0)”; -webkit-transition: opacity 0.5s linear; transition:opacity 0.5s linear; }
+
+.slick-initialized { visibility: visible !important; opacity:1 !important; -ms-filter: “progid:DXImageTransform.Microsoft.Alpha(Opacity=100)”; }
