--- a/styles/styles.css
+++ b/styles/styles.css
@@ -430,7 +430,7 @@
     width: 90%;
     margin: 0 auto;
     margin-bottom: 200px;
-    display: flex;
+    display: none;
     flex-direction: row;
     flex-wrap: wrap;
     position: relative;
