--- a/styles/styles.css
+++ b/styles/styles.css
@@ -552,7 +552,7 @@
     height: 80vh;
     width: 100%;
     position: relative;
-    background-color: #1A1919;
+    background-image: url('./imgs/darkwood.jpg');
     background-size: cover;
     display: flex;
     font-family: JosifinSans-Regular;
