--- a/styles/styles.css
+++ b/styles/styles.css
@@ -425,6 +425,13 @@
     background-position: center;
   }
 
+  #writers {
+    background-image: url("./imgs/thewritersgang.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
   .projcon {
     height: 100%;
     width: 90%;
