--- a/views/home.html
+++ b/views/home.html
@@ -158,6 +158,21 @@
             Wix. Uses sliders, Javascript, and jQuery effects</p>
           </div>
         </div>
+        <div id="thewritersgang" class="project item">
+          <div class="left piece">
+            <a href="http://138.68.60.37:8082/#!/">
+              <div id="writers" class="projimg">
+                <div class="projcover">
+                  <h1 class="go2">In Progress</h1>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="right piece">
+          <h1 class="pronam"><a href="http://138.68.60.37:8082/#!/">The Writers Gang</a></h1>
+            <p>Project currently being built for client</p>
+          </div>
+        </div>
       </div>
     </div>
     <div id="contact" class="sec4 sec">
