--- a/views/home.html
+++ b/views/home.html
@@ -173,6 +173,21 @@
             <p>Project currently being built for client</p>
           </div>
         </div>
+        <div id="Image-filter-app" class="project item">
+          <div class="left piece">
+            <a href="https://sbrycebarker.github.io/Photo-Filter/">
+              <div id="Image-filter" class="projimg">
+                <div class="projcover">
+                  <h1 class="go2">GO TO PROJECT</h1>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="right piece">
+          <h1 class="pronam"><a href="https://sbrycebarker.github.io/Photo-Filter/">Image Filter App</a></h1>
+            <p>Upload and Image and add filter using CamanJs</p>
+          </div>
+        </div>
       </div>
     </div>
     <div id="contact" class="sec4 sec">
