--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -392,6 +392,13 @@
     background-position: center;
   }
 
+  #Image-filter {
+    background-image: url("./imgs/OIF.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
   .projcon {
     height: 90%;
     width: 90%;
