--- a/styles/styles.css
+++ b/styles/styles.css
@@ -432,6 +432,13 @@
     background-position: center;
   }
 
+  #Image-filter {
+    background-image: url("./imgs/OIF.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
   .projcon {
     height: 100%;
     width: 90%;
