--- a/views/home.html
+++ b/views/home.html
@@ -62,6 +62,7 @@
             <h1 class="pronam"><a href="https://sbrycebarker.github.io/Star-Wars-Planets/">Star Wars Planets</a></h1>
             <p>A simple angular app accessing <a href="http://swapi.co">swapi.co</a> and google weather.
               Jquery animations, angular-ui-router also used. Built as a first project for Dev Mountain </p>
+              <p><a href="https://github.com/sbrycebarker/Star-Wars-Planets">Project GitHub</a></p>
           </div>
         </div>
         <div id="subpro" class="project item">
@@ -78,6 +79,7 @@
             <h1 class="pronam"><a href="http://barkersubaru.com">Subaru Clone</a></h1>
             <p>A partial clone of the Subaru.com website. Built with Angularjs, Nodejs, Express,
             MongoDb, Gulp and Sass. Select a car, add accessories and "checkout"</p>
+              <p><a href="https://github.com/sbrycebarker/subaruclone">Project GitHub</a></p>
         </div>
         </div>
         <div id="rockpro" class="project item">
@@ -94,6 +96,7 @@
             <h1 class="pronam"><a href="http://rockshowz.info">RockshowZ</a></h1>
             <p>An app built as a final/group project at Dev Mountain. This project uses Angularjs, Node, Express, ElephantSql, Auth0 and is hosted on Digital Ocean. It uses multiple APIs to search for venues or bands. You can login and add favorites to track
           later.</p>
+              <p><a href="https://github.com/Sergeandarden/rockshowz">Project GitHub</a></p>
           </div>
         </div>
         <div id="todopro" class="project item">
@@ -110,6 +113,7 @@
             <h1 class="pronam"><a href="http://138.68.60.37:8084/#!/">To Do App</a></h1>
             <p>A simple to do list made to apply knowledge of CRUD operations. Create a task with time stamps
             change or delete them. Pagenation done with Bootstrap</p>
+              <p><a href="https://github.com/sbrycebarker/todoapp">Project GitHub</a></p>
           </div>
         </div>
         <div id="drumkitpro" class="project item">
@@ -125,6 +129,7 @@
           <div class="right piece">
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/">Drum Kit</a></h1>
             <p>A drumkit built watching 30Daysofjavascript. Click the buttons for drum noises and visuals</p>
+              <p><a href="https://github.com/sbrycebarker/DRUm-KIT">Project GitHub</a></p>
           </div>
         </div>
         <div id="clockpro" class="project item">
@@ -140,6 +145,7 @@
           <div class="right piece">
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/">Clock</a></h1>
             <p>A clock made watching 30Daysofjavascript to strengthen javascript skills. Tells the time!</p>
+              <p><a href="https://github.com/sbrycebarker/CLOCK">Project GitHub</a></p>
           </div>
         </div>
         <div id="performpro" class="project item">
@@ -156,9 +162,10 @@
           <h1 class="pronam"><a href="http://138.68.60.37:8085/#!/">Barker Performance</a></h1>
             <p>An E-commerce site currently being worked on. Using the MEAN stack. Design is based on a template from
             Wix. Uses sliders, Javascript, and jQuery effects</p>
+              <p><a href="https://github.com/sbrycebarker/barkerperformance">Project GitHub</a></p>
           </div>
         </div>
-        <div id="thewritersgang" class="project item">
+        <!-- <div id="thewritersgang" class="project item">
           <div class="left piece">
             <a href="http://138.68.60.37:8082/#!/">
               <div id="writers" class="projimg">
@@ -172,7 +179,7 @@
           <h1 class="pronam"><a href="http://138.68.60.37:8082/#!/">The Writers Gang</a></h1>
             <p>Project currently being built for client</p>
           </div>
-        </div>
+        </div> -->
         <div id="Image-filter-app" class="project item">
           <div class="left piece">
             <a href="https://sbrycebarker.github.io/Photo-Filter/">
@@ -186,6 +193,23 @@
           <div class="right piece">
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/Photo-Filter/">Image Filter App</a></h1>
             <p>Upload and Image and add filter using CamanJs</p>
+              <p><a href="https://github.com/sbrycebarker/Photo-Filter">Project GitHub</a></p>
+          </div>
+        </div>
+        <div id="rock20pro" class="project item">
+          <div class="left piece">
+            <a href="https://github.com/sbrycebarker/rockshowz2.0">
+              <div id="rock2-0" class="projimg">
+                <div class="projcover rockcov">
+                  <h1 class="go2">GO TO PROJECT</h1>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="right piece">
+            <h1 class="pronam"><a href="https://github.com/sbrycebarker/rockshowz2.0">RockshowZ</a></h1>
+            <p>A solo rebuild of the RockshowZ app built with SASS a Javascript</p>
+              <p><a href="https://github.com/sbrycebarker/rockshowz2.0">Project GitHub</a></p>
           </div>
         </div>
       </div>
