--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -415,6 +415,14 @@
     background-position: center;
   }
 
+  #rock2-0 {
+    background-image: url("./imgs/rockshowz2.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+
   .projcon {
     height: auto;
     width: 90%;
