--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -399,6 +399,13 @@
     background-position: center;
   }
 
+  #rock2-0 {
+    background-image: url("./imgs/rockshowz2.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
   .projcon {
     height: 90%;
     width: 90%;
