--- a/views/home.html
+++ b/views/home.html
@@ -160,7 +160,7 @@
           </div>
           <div class="right piece">
           <h1 class="pronam"><a href="http://138.68.60.37:8085/#!/">Barker Performance</a></h1>
-            <p>An E-commerce site currently being worked on. Using the MEAN stack. Design is based on a template from
+            <p>A work in progress! E-commerce site using the MEAN stack. Design is based on a template from
             Wix. Uses sliders, Javascript, and jQuery effects</p>
               <p><a href="https://github.com/sbrycebarker/barkerperformance">Project GitHub</a></p>
           </div>
