--- a/views/home.html
+++ b/views/home.html
@@ -14,8 +14,8 @@
           <img src="./styles/imgs/sergio.jpg" style="" class="sergio rightimgs">
         </div>
         <div id="leftabout" class="about_div">
-          <h1>I am a full-stack javascript developer, living in Provo Ut.<br>
-          I love cars cooking and gaming and am ready to get to work</h1>
+          <h1>I am a full-stack javascript developer, living in Provo, Ut.<br>
+          I love cars, cooking, and gaming and am ready to get to work.</h1>
           <!-- <a href="https://twitter.com/statemaryland?lang=en"><img src="styles/imgs/maryland.png" class="md" class="cuttingboard"></a> -->
           <!-- <img src="./styles/imgs/cutting_board.jpg" class="cuttingboard"> -->
         </div>
@@ -28,21 +28,19 @@
     </div>
     <div id="skills" class="sec2 sec parallax-window" data-parallax="scroll" data-image-src="./styles/imgs/codeback.jpeg">
       <h1 class="titles">SKILLS</h1>
+      <!-- <h4>Click on icon to visit</h4> -->
       <div class="skillsbox">
-          <ul><a href="https://angularjs.org/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-angularjs-plain-wordmark"></i></a></ul>
-          <ul><a href="https://atom.io/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-atom-original-wordmark"></i></a></ul>
-          <ul><a href="https://expressjs.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-express-original-wordmark"></i></a></ul>
-          <ul><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-html5-plain-wordmark"></i></a></ul>
-          <ul><a href="https://www.javascript.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-javascript-plain"></i></a></ul>
-          <ul><a href="https://jquery.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-jquery-plain-wordmark"></i></a></ul>
-          <ul><a href="https://www.mongodb.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-mongodb-plain-wordmark"></i></a></ul>
-          <ul><a href="https://www.postgresql.org/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-postgresql-plain-wordmark"></i></a></ul>
-          <ul><a href="https://nodejs.org/en/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-nodejs-plain-wordmark"></i></a></ul>
-          <ul><a href="https://www.w3schools.com/css/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-css3-plain-wordmark"></i></a></ul>
-          <ul><a href="https://gulpjs.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-gulp-plain"></i></a></ul>
-          <!-- <ul></ul>
-          <ul></ul>
-          <ul></ul> -->
+          <ul><a href="https://angularjs.org/" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-angularjs-plain-wordmark"></i></a></ul>
+          <ul><a href="https://atom.io/" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-atom-original-wordmark"></i></a></ul>
+          <ul><a href="https://expressjs.com/" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-express-original-wordmark"></i></a></ul>
+          <ul><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-html5-plain-wordmark"></i></a></ul>
+          <ul><a href="https://www.javascript.com/" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-javascript-plain"></i></a></ul>
+          <ul><a href="https://jquery.com/" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-jquery-plain-wordmark"></i></a></ul>
+          <ul><a href="https://www.mongodb.com/" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-mongodb-plain-wordmark"></i></a></ul>
+          <ul><a href="https://www.postgresql.org/" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-postgresql-plain-wordmark"></i></a></ul>
+          <ul><a href="https://nodejs.org/en/" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-nodejs-plain-wordmark"></i></a></ul>
+          <ul><a href="https://www.w3schools.com/css/" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-css3-plain-wordmark"></i></a></ul>
+          <ul><a href="https://gulpjs.com/" target="_blank" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-gulp-plain"></i></a></ul>
       </div>
     </div>
     <div id="projects" class="sec3 sec">
@@ -50,24 +48,24 @@
       <div class="projcon multiple-items">
         <div id="performpro" class="project item">
           <div class="left piece">
-            <a href="http://138.68.60.37:8085/#!/">
+            <a href="http://138.68.60.37:8085/#!/" target="_blank">
               <div id="perform" class="projimg">
                 <div class="projcover">
-                  <h1 class="go2">In Progress</h1>
+                  <h1 class="go2">Visit site in progress</h1>
                 </div>
               </div>
             </a>
           </div>
           <div class="right piece">
-          <h1 class="pronam"><a href="http://138.68.60.37:8085/#!/">Barker Performance</a></h1>
-            <p>A work in progress! E-commerce site using the MEAN stack. Design is based on a template from
-            Wix. Uses sliders, Javascript, and jQuery effects</p>
-              <p><a href="https://github.com/sbrycebarker/barkerperformance">Project GitHub</a></p>
+          <h1 class="pronam"><a href="http://138.68.60.37:8085/#!/" target="_blank">Barker Performance</a></h1>
+            <p>A work in progress! E-commerce site using the MongoDB, ExpressJs, AngularJs, NodeJs. The design is based on a template from
+            Wix. It uses Slick slider, and jQuery effects.</p>
+              <p><a href="https://github.com/sbrycebarker/barkerperformance" target="_blank">Project GitHub</a></p>
           </div>
         </div>
         <div id="subpro" class="project item">
           <div class="left piece">
-          <a href="http://barkersubaru.com">
+          <a href="http://barkersubaru.com" target="_blank">
             <div id="subaru" class="projimg">
               <div class="projcover">
                 <h1 class="go2">GO TO PROJECT</h1>
@@ -76,15 +74,15 @@
           </a>
         </div>
         <div class="right piece">
-            <h1 class="pronam"><a href="http://barkersubaru.com">Subaru Clone</a></h1>
-            <p>A partial clone of the Subaru.com website. Built with Angularjs, Nodejs, Express,
-            MongoDb, Gulp and Sass. Select a car, add accessories and "checkout"</p>
-              <p><a href="https://github.com/sbrycebarker/subaruclone">Project GitHub</a></p>
+            <h1 class="pronam"><a href="http://barkersubaru.com" target="_blank">Subaru Clone</a></h1>
+            <p>A partial clone of the Subaru.com website. Built with AngularJs, NodeJs, Express,
+            MongoDb, Gulp and Sass. Select a car, add accessories and "checkout".</p>
+              <p><a href="https://github.com/sbrycebarker/subaruclone" target="_blank">Project GitHub</a></p>
         </div>
         </div>
         <div id="rockpro" class="project item">
           <div class="left piece">
-            <a href="http://rockshowz.info">
+            <a href="http://rockshowz.info" target="_blank">
               <div id="rockshowZ" class="projimg">
                 <div class="projcover rockcov">
                   <h1 class="go2">GO TO PROJECT</h1>
@@ -93,15 +91,15 @@
             </a>
           </div>
           <div class="right piece">
-            <h1 class="pronam"><a href="http://rockshowz.info">RockshowZ</a></h1>
-            <p>An app built as a final/group project at Dev Mountain. This project uses Angularjs, Node, Express, ElephantSql, Auth0 and is hosted on Digital Ocean. It uses multiple APIs to search for venues or bands. You can login and add favorites to track
+            <h1 class="pronam"><a href="http://rockshowz.info" target="_blank">RockshowZ</a></h1>
+            <p>An app built as a final/group project at Dev Mountain. This project uses AngularJs, Node, Express, ElephantSql, Auth0 and is hosted on Digital Ocean. It uses multiple APIs to search for venues or bands. You can login and add favorites to track
           later.</p>
-              <p><a href="https://github.com/Sergeandarden/rockshowz">Project GitHub</a></p>
+              <p><a href="https://github.com/Sergeandarden/rockshowz" target="_blank">Project GitHub</a></p>
           </div>
         </div>
         <div id="todopro" class="project item">
           <div class="left piece">
-            <a href="http://138.68.60.37:8084/#!/">
+            <a href="http://138.68.60.37:8084/#!/" target="_blank">
               <div id="todoapp" class="projimg">
                 <div class="projcover rockcov">
                   <h1 class="go2">GO TO PROJECT</h1>
@@ -110,15 +108,15 @@
             </a>
           </div>
           <div class="right piece">
-            <h1 class="pronam"><a href="http://138.68.60.37:8084/#!/">To Do App</a></h1>
+            <h1 class="pronam"><a href="http://138.68.60.37:8084/#!/" target="_blank">To Do App</a></h1>
             <p>A simple to do list made to apply knowledge of CRUD operations. Create a task with time stamps
-            change or delete them. Pagenation done with Bootstrap</p>
-              <p><a href="https://github.com/sbrycebarker/todoapp">Project GitHub</a></p>
+            change or delete them. Pagenation done with Bootstrap.</p>
+              <p><a href="https://github.com/sbrycebarker/todoapp" target="_blank">Project GitHub</a></p>
           </div>
         </div>
         <div id="drumkitpro" class="project item">
           <div class="left price">
-            <a href="https://sbrycebarker.github.io/DRUM-KIT/">
+            <a href="https://sbrycebarker.github.io/DRUM-KIT/" target="_blank">
               <div id="drumkit" class="projimg">
                 <div class="projcover">
                   <h1 class="go2">GO TO PROJECT</h1>
@@ -127,14 +125,14 @@
             </a>
           </div>
           <div class="right piece">
-          <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/">Drum Kit</a></h1>
-            <p>A drumkit built watching 30Daysofjavascript. Click the buttons for drum noises and visuals</p>
-              <p><a href="https://github.com/sbrycebarker/DRUm-KIT">Project GitHub</a></p>
+          <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/" target="_blank">Drum Kit</a></h1>
+            <p>A drumkit built watching 30Daysofjavascript. Click the buttons for drum noises and visuals.</p>
+              <p><a href="https://github.com/sbrycebarker/DRUm-KIT" target="_blank">Project GitHub</a></p>
           </div>
         </div>
         <div id="clockpro" class="project item">
           <div class="left piece">
-            <a href="https://sbrycebarker.github.io/CLOCK/">
+            <a href="https://sbrycebarker.github.io/CLOCK/" target="_blank">
               <div id="clock" class="projimg">
                 <div class="projcover">
                   <h1 class="go2">GO TO PROJECT</h1>
@@ -143,14 +141,14 @@
             </a>
           </div>
           <div class="right piece">
-          <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/">Clock</a></h1>
+          <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/" target="_blank">Clock</a></h1>
             <p>A clock made watching 30Daysofjavascript to strengthen javascript skills. Tells the time!</p>
-              <p><a href="https://github.com/sbrycebarker/CLOCK">Project GitHub</a></p>
+              <p><a href="https://github.com/sbrycebarker/CLOCK" target="_blank">Project GitHub</a></p>
           </div>
         </div>
         <div id="starpro" class="project item">
           <div class="left piece">
-            <a href="https://sbrycebarker.github.io/Star-Wars-Planets/">
+            <a href="https://sbrycebarker.github.io/Star-Wars-Planets/" target="_blank">
               <div id="starwars" class="projimg">
                 <div class="projcover starcov">
                   <h1 class="go2">GO TO PROJECT</h1>
@@ -159,10 +157,10 @@
             </a>
           </div>
           <div class="right piece">
-            <h1 class="pronam"><a href="https://sbrycebarker.github.io/Star-Wars-Planets/">Star Wars Planets</a></h1>
-            <p>A simple angular app accessing <a href="http://swapi.co">swapi.co</a> and google weather.
-              Jquery animations, angular-ui-router also used. Built as a first project for Dev Mountain </p>
-              <p><a href="https://github.com/sbrycebarker/Star-Wars-Planets">Project GitHub</a></p>
+            <h1 class="pronam"><a href="https://sbrycebarker.github.io/Star-Wars-Planets/" target="_blank">Star Wars Planets</a></h1>
+            <p>A simple AngularJs app accessing <a href="http://swapi.co">SWAPI.co</a> and google weather.
+              Jquery animations, angular-ui-router also used. Built as a first project for Dev Mountain.</p>
+              <p><a href="https://github.com/sbrycebarker/Star-Wars-Planets" target="_blank">Project GitHub</a></p>
           </div>
         </div>
         <!-- <div id="thewritersgang" class="project item">
@@ -182,7 +180,7 @@
         </div> -->
         <div id="Image-filter-app" class="project item">
           <div class="left piece">
-            <a href="https://sbrycebarker.github.io/Photo-Filter/">
+            <a href="https://sbrycebarker.github.io/Photo-Filter/" target="_blank">
               <div id="Image-filter" class="projimg">
                 <div class="projcover">
                   <h1 class="go2">GO TO PROJECT</h1>
@@ -191,14 +189,14 @@
             </a>
           </div>
           <div class="right piece">
-          <h1 class="pronam"><a href="https://sbrycebarker.github.io/Photo-Filter/">Image Filter App</a></h1>
-            <p>Upload and Image and add filter using CamanJs</p>
-              <p><a href="https://github.com/sbrycebarker/Photo-Filter">Project GitHub</a></p>
+          <h1 class="pronam"><a href="https://sbrycebarker.github.io/Photo-Filter/" target="_blank">Image Filter App</a></h1>
+            <p>Upload an Image and add filter using CamanJs.</p>
+              <p><a href="https://github.com/sbrycebarker/Photo-Filter" target="_blank">Project GitHub</a></p>
           </div>
         </div>
         <div id="rock20pro" class="project item">
           <div class="left piece">
-            <a href="https://github.com/sbrycebarker/rockshowz2.0">
+            <a href="https://github.com/sbrycebarker/rockshowz2.0" target="_blank">
               <div id="rock2-0" class="projimg">
                 <div class="projcover rockcov">
                   <h1 class="go2">GO TO PROJECT</h1>
@@ -225,21 +223,21 @@
         </a>
       </div>
       <div id="email" class="det">
-        <a href="mailto:sbrycebarker@gmail.com.com">
+        <a href="mailto:sbrycebarker@gmail.com.com" target="_blank">
           <i class="fa fa-envelope-o" aria-hidden="true" style="font-size: 30px; color: red"></i>
             <h2>Email</h2>
             <p>sbrycebarker@gmail.com</p>
         </a>
       </div>
       <div id="github" class="det">
-      <a href="https://github.com/sbrycebarker">
+      <a href="https://github.com/sbrycebarker" target="_blank">
         <i class="fa fa-github" aria-hidden="true" style="font-size: 30px;"></i>
           <h2>GitHub</h2>
             <p>Sbrycebarker</p>
       </a>
       </div>
       <div id="linkedin" class="det">
-      <a href="https://www.linkedin.com/in/sergio-barker/">
+      <a href="https://www.linkedin.com/in/sergio-barker/" target="_blank">
         <i class="fa fa-linkedin-square" aria-hidden="true" style="font-size: 30px; color: #0073B1;"></i>
         <h2>LinkedIn</h2>
         <p>www.linkedin.com/in/sergio-barker</p>
