--- a/styles/styles.css
+++ b/styles/styles.css
@@ -515,7 +515,7 @@
     width: 100%;
     background-color: white;
     z-index: 3;
-    opacity: 0;
+    opacity: .9;
     text-align: center;
     display: flex;
     vertical-align: middle;
@@ -568,7 +568,7 @@
   .projcover:hover {
     transition-property: opacity;
     transition-duration: 1s;
-    opacity: .9
+    opacity: .1
   }
 
   #contact {
