--- a/views/home.html
+++ b/views/home.html
@@ -58,7 +58,7 @@
           </div>
           <div class="right piece">
           <h1 class="pronam"><a href="http://138.68.60.37:8085/#!/" target="_blank">Barker Performance</a></h1>
-            <p>A work in progress! E-commerce site using the MongoDB, ExpressJs, AngularJs, NodeJs. The design is based on a template from
+            <p>A work in progress! E-commerce site using MongoDB, ExpressJs, AngularJs, NodeJs. The design is based on a template from
             Wix. It uses Slick slider, and jQuery effects.</p>
               <p><a href="https://github.com/sbrycebarker/barkerperformance" target="_blank">Project GitHub</a></p>
           </div>
